# tpa

./: CLAUDE.md  Cargo.toml  README.md
examples/: README.md  analyze_tracepoints.rs  offset_demo.rs  open_bench.rs  seek_bench_bgzip_paf.rs  seek_bench_direct.rs  seek_bench_reader.rs  seek_benchmark.rs  seek_correctness_test.rs  seek_demo.rs
examples/common/: mod.rs
scripts/: check-automatic.py  comprehensive_test.sh  normalize_paf.py  plot_results.py  run_all_tests.sh
src/: advanced_codecs.rs  binary.rs  cigar.rs  format.rs  hybrids.rs  index.rs  lib.rs  reader.rs  utils.rs
test/: .gitignore  README.md  accurate_test.sh  comprehensive_test.sh  debug_failing_strategies.sh  normalize_paf.pl  plot_results.py  run_all_tests.sh  seek_bench.rs  seek_benchmark.sh
